--- a/app/src/main/res/layout/shop_items_template.xml
+++ b/app/src/main/res/layout/shop_items_template.xml
@@ -9,6 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageButton
+            android:id="@+id/ibShopBuyOne"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toStartOf="@+id/guideline18"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/button_buy" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline17"
             android:layout_width="wrap_content"
@@ -30,36 +41,18 @@
             android:layout_marginTop="36dp"
             android:text="x50"
             android:textSize="55sp"
-            app:layout_constraintEnd_toStartOf="@+id/btnShopBuyOne"
+            app:layout_constraintEnd_toStartOf="@+id/ibShopBuyOne"
             app:layout_constraintStart_toEndOf="@+id/ivShopItemPicture"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btnShopBuyTen"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="4dp"
-            android:text="BUY 10"
-            app:layout_constraintEnd_toStartOf="@+id/guideline18"
-            app:layout_constraintTop_toBottomOf="@+id/btnShopBuyOne" />
-
-        <Button
-            android:id="@+id/btnShopBuyOne"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="8dp"
-            android:text="BUY"
-            app:layout_constraintEnd_toStartOf="@+id/guideline18"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/ivShopItemPicture"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginTop="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline17"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/dot" />
+            app:srcCompat="@drawable/wep_1_1_fist" />
 
         <TextView
             android:id="@+id/tvShopForOne"
@@ -67,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="X FOR 1"
-            app:layout_constraintEnd_toStartOf="@+id/btnShopBuyTen"
+            app:layout_constraintEnd_toStartOf="@+id/ibShopBuyTen"
             app:layout_constraintStart_toEndOf="@+id/ivShopItemPicture"
             app:layout_constraintTop_toBottomOf="@+id/tvShopQuantity" />
 
@@ -77,9 +70,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="X FOR 10"
-            app:layout_constraintEnd_toStartOf="@+id/btnShopBuyTen"
+            app:layout_constraintEnd_toStartOf="@+id/ibShopBuyTen"
             app:layout_constraintStart_toEndOf="@+id/ivShopItemPicture"
             app:layout_constraintTop_toBottomOf="@+id/tvShopForOne" />
 
+        <ImageButton
+            android:id="@+id/ibShopBuyTen"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline18"
+            app:layout_constraintTop_toBottomOf="@+id/ibShopBuyOne"
+            app:srcCompat="@drawable/button_buy_10" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
