--- a/app/src/main/res/layout/shop_pets_template.xml
+++ b/app/src/main/res/layout/shop_pets_template.xml
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/dot" />
+            app:srcCompat="@drawable/pet_dog" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
