--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#3D4F2B">
 
     <SurfaceView
         android:id="@+id/surfaceGame"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="STAGE 1"
+        android:textColor="#EEFFCC"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ROUND 1"
+        android:textColor="#EEFFCC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvStage" />
@@ -41,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="sussy alien"
+        android:textColor="#EEFFCC"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
         app:layout_constraintTop_toBottomOf="@+id/surfaceGame" />
@@ -65,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="30/30 HP"
+        android:textColor="#EEFFCC"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/surfaceGame" />
 
@@ -83,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50 DMG/s"
+        android:textColor="#EEFFCC"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/pbHpBar" />
 
@@ -103,6 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="PLAYER NAME"
+        android:textColor="#EEFFCC"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline6" />
 
@@ -121,6 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="PET NAME"
+        android:textColor="#EEFFCC"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline7" />
 
@@ -138,6 +146,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:text="22 SCRAP"
+        android:textColor="#EEFFCC"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btnGameShop"
         app:layout_constraintStart_toStartOf="parent" />
@@ -146,7 +155,10 @@
         android:id="@+id/btnGameShop"
         android:layout_width="0dp"
         android:layout_height="70dp"
+        android:background="@drawable/button_outline"
         android:text="SHOP"
+        android:textColor="#EEFFCC"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/ibGameStat"
         app:layout_constraintStart_toStartOf="parent" />
@@ -162,6 +174,7 @@
         android:id="@+id/ibGameStat"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         android:src="@drawable/button_stats"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
@@ -171,6 +184,7 @@
         android:id="@+id/ibGameOption"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         android:src="@drawable/button_settings"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
