--- a/app/src/main/res/layout/activity_game_option.xml
+++ b/app/src/main/res/layout/activity_game_option.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3D4F2B "
     tools:context=".GameOptionActivity">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="GAME VOLUME"
+        android:textColor="#EEFFCC"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/sbGameVolume"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="MUSIC VOLUME"
+        android:textColor="#EEFFCC"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/sbMusicVolume"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +112,7 @@
         android:text="Name"
         android:textAlignment="center"
         android:textAllCaps="false"
+        android:textColor="#EEFFCC"
         android:textSize="48sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -125,6 +129,7 @@
         android:id="@+id/ibGameOptionSave"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -134,6 +139,7 @@
         android:id="@+id/ibGameOptionDefault"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toStartOf="@+id/ibGameOptionSave"
@@ -144,6 +150,7 @@
         android:id="@+id/ibGameOptionBack"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
