--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3D4F2B"
     tools:context=".MainActivity">
 
     <ImageView
@@ -25,9 +26,10 @@
 
     <ImageButton
         android:id="@+id/ibPlay"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_width="221dp"
+        android:layout_height="113dp"
         android:adjustViewBounds="true"
+        android:backgroundTint="#3D4F2B "
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -41,6 +43,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="32dp"
         android:adjustViewBounds="true"
+        android:background="#3D4F2B "
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
