--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3D4F2B"
     tools:context=".ShopActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -26,6 +27,7 @@
         android:id="@+id/ibShopBack"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibShopBuff"
@@ -37,6 +39,7 @@
         android:id="@+id/ibShopBuff"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibShopWeapon"
@@ -48,6 +51,7 @@
         android:id="@+id/ibShopWeapon"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibShopPets"
@@ -59,6 +63,7 @@
         android:id="@+id/ibShopPets"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
