--- a/app/src/main/res/layout/activity_stat.xml
+++ b/app/src/main/res/layout/activity_stat.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3D4F2B"
     tools:context=".StatActivity">
 
     <ImageButton
         android:id="@+id/ibStatBack"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:background="#3D4F2B"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
