--- a/app/src/main/res/layout/activity_game_option.xml
+++ b/app/src/main/res/layout/activity_game_option.xml
@@ -12,9 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:fontFamily="@font/apple_kid"
         android:text="GAME VOLUME"
         android:textColor="#EEFFCC"
-        android:textSize="20sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/sbGameVolume"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.007"
@@ -45,9 +46,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
+        android:fontFamily="@font/apple_kid"
         android:text="MUSIC VOLUME"
         android:textColor="#EEFFCC"
-        android:textSize="20sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/sbMusicVolume"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.007"
@@ -108,12 +110,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:ems="10"
+        android:fontFamily="@font/apple_kid"
         android:inputType="textPersonName"
         android:text="Name"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#EEFFCC"
-        android:textSize="48sp"
+        android:textSize="60sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toBottomOf="@+id/ivPlayerIcon2" />
