--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -8,6 +8,7 @@
     tools:context=".ShopActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvShop"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
