resized alien sprite in surface view; changed progress bar's progress color

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -84,6 +84,10 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:foregroundTint="#EEFFCC"
+        android:indeterminateTint="#EEFFCC"
+        android:indeterminateTintMode="src_atop"
+        android:progressTint="#EEFFCC"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
@@ -209,7 +213,11 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvRound"
         tools:srcCompat="@android:color/transparent" />
